# x1safe-v2

./: .deployment-testnet.json  .env.example  .gitignore  .x1safe-mint-3ha5.json  .x1safe-mint-4377.json  .x1safe-mint-testnet.json  Anchor.toml  Cargo.toml  DEPLOY.md  MVP.md  README.md  build.sh  package.json  tsconfig.json  vercel.json
idl/: x1safe_mvp.json  x1safe_v2.json
programs/x1safe_mvp/: Cargo.toml
programs/x1safe_mvp/src/: lib.rs
programs/x1safe_v2/: Cargo.toml
programs/x1safe_v2/src/: admin.rs  deposit.rs  errors.rs  exit.rs  lib.rs  oracle.rs  state.rs  withdraw.rs
scripts/: check-status.js  deploy-cli.sh  deploy-fixed.js  deploy-mvp.sh  deploy-program.js  deploy-raw.js  deploy-simple.js  deploy-v3.js  deploy.js  deploy.sh  init-3ha5.js  init-4377.js  init-anchor.js  init-contract.js  init-final.js  init-gd6.js  init-mvp.js  init-simple.js  init-testnet.js  init_anchor.ts  init_check.js  initialize-full.js  initialize-raw.js  initialize.sh  initialize.ts  initialize_contract.js  oracle-update.js  setup_tokens.js  test-mvp.js  test-suite.js  upgrade.sh
tests/: x1safe_v2.ts
web-ui/: index.html  package.json  vercel.json
web-ui/public/: x1safe_v2.json
web-ui/src/: App.tsx  constants.ts  idl.ts  index.css  mvp-constants.ts
web-ui/src/components/: DepositPanel.tsx  ExitPanel.tsx  PositionPanel.tsx  VaultDashboard.tsx  VaultStats.tsx  WithdrawPanel.tsx
