[package]
name = "x1safe_v2"
version = "2.0.0"
description = "X1SAFE V2 - Multi-Token Vault with Soulbound X1SAFE"
edition = "2021"
authors = ["X1 Labs <dev@x1.xyz>"]
license = "MIT"
repository = "https://github.com/x1-labs/x1safe-v2"

[lib]
crate-type = ["cdylib", "lib"]
name = "x1safe_v2"

[features]
default = ["mainnet"]
mainnet = []
devnet = []
localnet = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata", "token", "token_2022"] }
solana-program = "=1.18.26"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
anchor-client = "0.30.1"
